--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Thrice64/Veriphone-app-cli#readme",
   "dependencies": {
+    "prompts": "^2.4.2",
     "superagent": "^8.0.9",
     "yargs": "^17.7.1"
   }
